<resources>
    <string name="app_name">Taller</string>
    <string name="registrar_empleado">Registrar Empleado</string>
    <string name="empleado_m_s_viejo">Empleado más viejo</string>
    <string name="empleado_m_s_joven">Empleado más joven</string>
    <string name="informaci_n_salarios">Información salarios</string>
    <string name="info_cargos">Información cargos</string>
    <string name="getion_de_empleados">Getion de empleados</string>
    <string name="textview1">TextView</string>
    <string name="edad">Edad:</string>
    <string name="textview2">TextView</string>
    <string name="apellidos">Apellidos:</string>
    <string name="textview3">TextView</string>
    <string name="nombre">Nombre:</string>
    <string name="persona_m_s_joven">Persona más joven</string>
    <string name="textview4">TextView</string>
    <string name="correo_electronico">Correo electronico:</string>
    <string name="textview5">TextView</string>
    <string name="cargo">Cargo:</string>
    <string name="salario">Salario:</string>
    <string name="textview6">TextView</string>
    <string name="info_salarios">Información salarios</string>
    <string name="salario_m_s_alto">Salario más alto:</string>
    <string name="textview">TextView</string>
    <string name="salario_m_s_bajo">Salario más bajo:</string>
    <string name="tvSalarioBajo">TextView</string>
    <string name="promedio_salarios">Promedio salarios:</string>
    <string name="tvSalarioProm">TextView</string>
    <string name="guardar">Guardar</string>
    <string name="regs_empleado">Registrar empleado</string>
    <string name="tvcargos">TextView</string>
    <string name="tvMostrar">TextView</string>
    <string name="tvluisa">TextView</string>
</resources>