<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context=".ConsultaInformacion">

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvCargoCon"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:text="@string/textview1"
        android:textColor="#000000"

        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvPersona"
        android:layout_width="281dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/persona_m_s_joven"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="30sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPersona" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvNombreCon"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:background="#FBFAFA"
        android:padding="10dp"
        android:text="@string/textview2"
        android:textColor="#121111"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/apellidos"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreCon" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvApellidosCon"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:background="#FBF9F9"
        android:padding="10dp"
        android:text="@string/textview3"
        android:textColor="#151515"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView8"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/edad"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApellidosCon" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvEdadCon"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:text="@string/textview4"
        android:textColor="#000000"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView10"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/correo_electronico"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdadCon" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvCorreoCon"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:text="@string/textview5"
        android:textColor="#0C0C0C"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cargo"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCorreoCon" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView14"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/salario"
        android:textColor="#090909"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCargoCon" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvSalarioCon"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:text="@string/textview6"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />
</androidx.constraintlayout.widget.ConstraintLayout>