<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E7E7"
    tools:context=".InformacionSalarios">

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView3"
        android:layout_width="304dp"
        android:layout_height="109dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/informaci_n_salarios"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="36sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/salario_m_s_alto"
        android:textColor="#020202"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvSalarioAlto"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:text="@string/textview"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:padding="10dp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView9"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/salario_m_s_bajo"
        android:textColor="#070707"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSalarioAlto" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvSalarioBajo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:text="@string/tvSalarioBajo"
        android:textColor="#121111"
        android:textSize="18sp"
        android:padding="10dp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/textView13"
        android:layout_width="291dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/promedio_salarios"
        android:textColor="#090909"
        android:textSize="18sp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSalarioBajo" />

    <ec.dina.btefonts.TextViewFonts
        android:id="@+id/tvSalarioProm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:text="@string/tvSalarioProm"
        android:textSize="18sp"
        android:textColor="#0E0E0E"
        android:padding="10dp"
        app:dm_font="segoe_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />
</androidx.constraintlayout.widget.ConstraintLayout>